tests/baselines/reference/parserErrantEqualsGreaterThanAfterFunction1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction1.ts (2 errors) ====
    function f() => 4;
                 ~~
!!! error TS1144: Block or ';' expected.
             ~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.